# eval-driven-agents

./: .gitignore  README.md
samples/sales-copilot-agents/: .pre-commit-config.yaml  README.md  azure.yaml  pyproject.toml  requirements-dev.txt
samples/sales-copilot-agents/.devcontainer/: devcontainer.json
samples/sales-copilot-agents/.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md
samples/sales-copilot-agents/.github/workflows/: azure-dev.yml  template-validation.yml
samples/sales-copilot-agents/infra/: main.bicep  main.parameters.json
samples/sales-copilot-agents/src/backend/: .dockerignore  .env.development  Dockerfile  __init__.py  gunicorn.conf.py  main.py  mock_client.py  package_inspector.py  prompt.prompty  requirements.txt  routes.py  setup.py  shared.py  utils.py
samples/sales-copilot-agents/src/backend/agents/: __init__.py  customer_story_agent.py  engineer_feedback_agent.py  msx_info_agent.py
samples/sales-copilot-agents/src/backend/agents/customer_story_agent/: __init__.py  customer_story_agent.prompty  customer_story_agent.py
samples/sales-copilot-agents/src/backend/agents/engineer_feedback_agent/: __init__.py  (+3 more)
samples/sales-copilot-agents/src/backend/tests/: conftest.py  integration_tests.http  test_agents.py  test_api.py
samples/sales-copilot-agents/src/frontend/: .dockerignore  .eslintrc.js  Dockerfile  README.md  next.config.js  package.json  tailwind.config.js  tsconfig.json
samples/sales-copilot-agents/src/frontend/app/: global.css  globals.css  layout.tsx  page.tsx
tracing/: .env.example  README.md  basic_function_calling.py  basic_tracing.py  pyproject.toml  requirements.txt
(+15 files in other folders)
