[project]
name = "azure-ai-inference-tracing"
version = "0.1.0"
description = "Demonstration of observability and evaluation capabilities for Azure AI Inference SDK."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Govind Kamtamneni", email = "gok@microsoft.com" }
]
requires-python = ">=3.10"
keywords = ["azure", "ai", "inference", "observability", "tracing", "opentelemetry"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License"
]

[project.urls]
"Source Code" = "https://github.com/Azure-samples/eval-driven-agents"

[project.dependencies]
azure-ai-inference = {extras = ["opentelemetry"], version = "^1.0.0"}
azure-identity = "^1.14.0"
azure-monitor-opentelemetry = "^1.0.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
