[project]
name = "sales-copilot-agents"
version = "0.1.0"
description = "AI-powered tool for gaining insights from customer interactions"
authors = [
    {name = "Devin AI", email = "devin@example.com"}
]
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "python-dotenv>=0.19.0",
    "azure-ai-projects>=0.1.0",
    "azure-ai-evaluation>=0.1.0",
    "azure-search-documents>=11.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]
